<resources>
    <string name="app_name">TLTC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order">Ordenar</string>
    <string name="confirm_order">Confirmar servicio</string>
    <string name="confirmation">Confirmación</string>
    <string name="status">Estado del servicio</string>
    <string name="request_send">Solicitud enviada</string>
    <string name="request_accepted">Solicitud aceptada por un conductor</string>
    <string name="aproximated_time">Tiempo aproximado</string>
    <string name="arrived">Llegó el vehículo</string>
    <string name="email_reason">
        <p>
        Para poder acceder a nuestros servicios es necesario proporcionar
        una cuenta de correo electrónico. Por favor ingresa una cuenta de correo válida
        para continuar. Si es la primera vez que accedes a esta aplicación
        se guardará tu dirección en nuestra base de datos. Proporciona una contaseña
        que te permita acceder luego a la aplicación.
        Si olvidas la contraseña haz click en <b>RECUPERAR CONTRASEÑA</b> y se te enviará
        un correo electrónico a la dirección que proporcionaste para regenerar la contraseña.
        </p>
    </string>
    <string name="exit">Salir</string>
    <string name="send">Enviar</string>
    <string name="cancel">Cancelar</string>
    <string name="where_are_you">
        ¿Dónde estás?
    </string>
    <string name="where_are_you_going">
        ¿A dónde vas?
    </string>
    <string name="close_session">Cerrar sesión</string>
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="press_to_request_service">Pulsa aquí para pedir servicio</string>
    <string name="request_service">Pedir servicio</string>
    <string name="password_recovery">Recuperar contraseña</string>
    <string name="manage_account">Administrar cuenta</string>

    <string name="request_service_speech">
        Al solicitar un servicio se enviará a nuestra red de conductores una petición para
        atenderlo. Esta solicitud genera gastos operativos. Por favor asegúrese de que las
        direcciones de origen y destino del servicio sean las correctas. El pago será coordinado
        directamente con el conductor. Pronto ofreceremos otras alternativas.

    </string>

    <string name="request_service_speech_2">
        Al confirmar la solicitud del servicio acepta nuestros términos de contratación.
        Cualquier servicio solicitado y no pagado generará la suspensión inmediata y definitiva
        de la cuenta de usuario que lo solicitó.
    </string>

    <string name="confirm_request_service">
        Sí, deseo solicitar el servicio.
    </string>

    <string name="go_begin">Ir al principio</string>
    <string name="phone">Teléfono</string>
    <string name="todo">TODO</string>


</resources>